--- a/subfiles/part_03.tex
+++ b/subfiles/part_03.tex
@@ -225,7 +225,7 @@ See \cref{fig:cond_marginal_path_simulation} for an illustration. Before we prov
    \includegraphics[width=\textwidth]{figures/marginal_ode.png}
    \label{fig:Ng2}
 \end{subfigure}
-\caption{\label{fig:cond_marginal_path_simulation}Illustration of \cref{thm:marginalization_trick}. Simulating a  probability path with ODEs. Data distribution $\pdata$ in blue background. Gaussian $\pinit$ in red background. Top row: Conditional probability path. Left: Ground truth samples from conditional path $p_t(\cdot|z)$. Middle: ODE samples over time. Right: Trajectories by simulating ODE with $\uref_t(x|z)$ in \cref{eq:conditional_gaussian_vf}. Bottom row: Simulating a marginal probability path. Left: Ground truth samples from $p_t$. Middle: ODE samples over time. Right: Trajectories by simulating ODE with marginal vector field $\uflow_t(x)$. As one can see, the conditional vector field follows the conditional probability path and the marginal vector field follows the marginal probability path.}
+\caption{\label{fig:cond_marginal_path_simulation}Illustration of \cref{thm:marginalization_trick}. Simulating a  probability path with ODEs. Data distribution $\pdata$ in blue background. Gaussian $\pinit$ in red background. Top row: Conditional probability path. Left: Ground truth samples from conditional path $p_t(\cdot|z)$. Middle: ODE samples over time. Right: Trajectories by simulating ODE with $\uref_t(x|z)$ in \cref{eq:conditional_gaussian_vf}. Bottom row: Simulating a marginal probability path. Left: Ground truth samples from $p_t$. Middle: ODE samples over time. Right: Trajectories by simulating ODE with marginal vector field $\uflow_t(x)$. As one can see, the conditional vector field follows the conditional probability path and the marginal vector field follows the marginal probability path. / \cref{thm:marginalization_trick}的图示。使用ODEs模拟概率路径。数据分布$\pdata$为蓝色背景。高斯分布$\pinit$为红色背景。上排：条件概率路径。左：来自条件路径$p_t(\cdot|z)$的真值样本。中：随时间变化的ODE样本。右：通过用\cref{eq:conditional_gaussian_vf}中的$\uref_t(x|z)$模拟ODE得到的轨迹。下排：模拟边际概率路径。左：来自$p_t$的真值样本。中：随时间变化的ODE样本。右：通过用边际向量场$\uflow_t(x)$模拟ODE得到的轨迹。如可以看到，条件向量场遵循条件概率路径，边际向量场遵循边际概率路径。}
 \end{figure}
 \begin{examplebox}[Target ODE for Gaussian probability paths]
 As before, let $p_t(\cdot|\dap) = \mathcal{N}(\alpha_t \dap,\beta_t^2 I_d)$ for noise schedulers $\alpha_t,\beta_t$ (see \cref{eq:gaussian_conditional_probability_paths}). Let $\dot{\alpha}_t=\partial_t\alpha_t$ and $\dot{\beta}_t=\partial_t\beta_t$ denote respective time derivatives of $\alpha_t$ and $\beta_t$. Here, we want to show that the \themebf{conditional Gaussian vector field} given by
@@ -322,7 +322,7 @@ where in $(i)$ we used the definition of $p_t(x)$ in \cref{eq:marginal_prob_path
    \includegraphics[width=\textwidth]{figures/marginal_sde.png}
    \label{fig:Ng2}
 \end{subfigure}
-\caption{\label{fig:thm_sde_extension}Illustration of \cref{thm:langevin_trick}. Simulating a probability path with SDEs. This repeats the plots from \cref{fig:cond_marginal_path_simulation} with SDE sampling using \cref{eq:sde_extension}. Data distribution $\pdata$ in blue background. Gaussian $\pinit$ in red background. Top row: Conditional path. Bottom row: Marginal probability path. As one can see, the SDE transports samples from $\pinit$ into samples from $\delta_{z}$ (for the conditional path) and to $\pdata$ (for the marginal path).}
+\caption{\label{fig:thm_sde_extension}Illustration of \cref{thm:langevin_trick}. Simulating a probability path with SDEs. This repeats the plots from \cref{fig:cond_marginal_path_simulation} with SDE sampling using \cref{eq:sde_extension}. Data distribution $\pdata$ in blue background. Gaussian $\pinit$ in red background. Top row: Conditional path. Bottom row: Marginal probability path. As one can see, the SDE transports samples from $\pinit$ into samples from $\delta_{z}$ (for the conditional path) and to $\pdata$ (for the marginal path). / \cref{thm:langevin_trick}的图示。使用SDEs模拟概率路径。这重复了\cref{fig:cond_marginal_path_simulation}中的图，使用\cref{eq:sde_extension}进行SDE采样。数据分布$\pdata$为蓝色背景。高斯分布$\pinit$为红色背景。上排：条件路径。下排：边际概率路径。如可以看到，SDE将样本从$\pinit$传输到$\delta_{z}$的样本（对于条件路径）和$\pdata$（对于边际路径）。}
 \end{figure}
 
 \subsection{Conditional and Marginal Score Functions}
