--- a/subfiles/part_05.tex
+++ b/subfiles/part_05.tex
@@ -270,23 +270,23 @@ Note that the distribution of $X_1$ is not necessarily aligned with $X_1 \sim  \
 In \cref{fig:guidance}, we illustrate class-based classifier-free guidance on 128x128 ImageNet, as in \cite{cfg}. Similarly, in \cref{fig:mnist_guidance}, we visualize the affect of various guidance scales $w$ when applying classifier-free guidance to sampling from the MNIST dataset of handwritten digits.
 
 \begin{algorithm}[h]
-\caption{Classifier-free guidance training for Gaussian probability path $p_t(x|z)=\mathcal{N}(x;\alpha_tz,\beta_t^2I_d)$}
+\caption{Classifier-free guidance training for Gaussian probability path $p_t(x|z)=\mathcal{N}(x;\alpha_tz,\beta_t^2I_d)$ / 高斯概率路径$p_t(x|z)=\mathcal{N}(x;\alpha_tz,\beta_t^2I_d)$的无分类器引导训练}
 \label{alg:training_fm_score_matching_gaussian_paths}
 \begin{algorithmic}[1]
-\REQUIRE Paired dataset $(z,y)\sim \pdata$, neural network $u_t^\theta$
-\FOR{each mini-batch of data}
-    \STATE Sample a data example $(\dap,y)$ from the dataset.
-    \STATE Sample a random time $t \sim \text{Unif}_{[0,1]}$.
-    \STATE Sample noise $\epsilon\sim\mathcal{N}(0,I_d)$
-    \STATE Set $x=\alpha_t z + \beta_t \epsilon$
+\REQUIRE Paired dataset $(z,y)\sim \pdata$, neural network $u_t^\theta$ / 配对数据集$(z,y)\sim \pdata$，神经网络$u_t^\theta$
+\FOR{each mini-batch of data / 对于每个数据小批量}
+    \STATE Sample a data example $(\dap,y)$ from the dataset. / 从数据集中采样一个数据示例$(\dap,y)$。
+    \STATE Sample a random time $t \sim \text{Unif}_{[0,1]}$. / 采样一个随机时间$t \sim \text{Unif}_{[0,1]}$。
+    \STATE Sample noise $\epsilon\sim\mathcal{N}(0,I_d)$ / 采样噪声$\epsilon\sim\mathcal{N}(0,I_d)$
+    \STATE Set $x=\alpha_t z + \beta_t \epsilon$ / 设置$x=\alpha_t z + \beta_t \epsilon$
     % \hfill (\text{General case: }$x\sim p_t(\cdot|z)$)
     % %\IF{Flow matching}
-    \STATE With probability $p$ drop label: $y\leftarrow \varnothing$
-    \STATE Compute loss
+    \STATE With probability $p$ drop label: $y\leftarrow \varnothing$ / 以概率$p$丢弃标签：$y\leftarrow \varnothing$
+    \STATE Compute loss / 计算损失
     \begin{align*}
         \mathcal{L}(\theta) =& \|u_t^\theta(x|y)-(\dot{\alpha}_t\epsilon+\dot{\beta}_tz)\|^2 
     \end{align*}
-    \STATE Update the model parameters $\theta$ via gradient descent on $\mathcal{L}(\theta)$.
+    \STATE Update the model parameters $\theta$ via gradient descent on $\mathcal{L}(\theta)$. / 通过对$\mathcal{L}(\theta)$进行梯度下降来更新模型参数$\theta$。
 \ENDFOR
 \end{algorithmic}
 \end{algorithm}
@@ -304,7 +304,7 @@ A guided score network $s_t^\theta(x|y)$ trained with \cref{eq:guided_dsm} might
 \end{equation*}
 
 扩散模型的指导
-
+%TODO：此处的\cref{eq:dsm}渲染为问号 不过前面发现的很多问号都恢复正常了 不确定这是不是问题
 在本节中，我们将前一节的推理扩展到扩散模型。首先，与我们获得\cref{eq:guided_cfm}的方式相同，我们可以将条件评分匹配损失\cref{eq:dsm}推广以获得\themebf{引导条件评分匹配目标}
 \begin{align}
     \label{eq:guided_dsm}
